# termforum

./: .gitignore  DEMO.md  IMPROVEMENTS.md  README.md  RUN_DEMO.md  TUI-UNDERGROUND.md  ULTIMATE_DESIGN.md  create_test_data.py  pyproject.toml  update_categories.py
setup/: termux-ultimate-setup.sh
termforum/: __init__.py  app.py  main.py
termforum/ai/: __init__.py  ai_bot.py  commands.py  ollama_client.py  prompts.py
termforum/auth/: __init__.py  polycrypt.py  session.py
termforum/config/: __init__.py  config_manager.py
termforum/i18n/: __init__.py  en.json  he.json  translator.py
termforum/models/: __init__.py  category.py  post.py  thread.py  user.py
termforum/storage/: __init__.py  database.py
termforum/themes/: __init__.py  theme_engine.py
termforum/ui/: __init__.py
termforum/ui/screens/: __init__.py  categories.py  home.py  login.py  settings.py  thread_view.py
termforum/utils/: __init__.py  ascii_art.py  glow.py
tui/: index.js  package.json  simple-tui.js  splash.js
